Fixes #27: The horizontal scroll is frozen
Previously the horizontal scroll was there on smaller screens.
This seems to fix the issue

--- a/_includes/css/general.css
+++ b/_includes/css/general.css
@@ -1,10 +1,11 @@
-html {
+html, body {
     height: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 body {
     font-family: 'Roboto', sans-serif;
-    height: 100%;
 }
 
 body > div.container-fluid {
